Prevent keyboard keys from growing too large

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -201,6 +201,7 @@ body {
 
 			.keyboard-key {
 				flex-basis: 1rem;
+				max-width: 5rem;
 				flex-grow: 1;
 			}
 		}
